--- a/smalyzer_app/templates/analyze.html
+++ b/smalyzer_app/templates/analyze.html
@@ -1,1 +1,7 @@
 It Works!!
+
+<form action="" method="POST" enctype="multipart/form-data">
+    {{ form.as_p }}
+    {% csrf_token %}
+    <button type="submit">送信</button>
+</form>
